--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,7 +9,10 @@
             "request": "launch",
             "name": "Launch Chrome",
             "url": "http://localhost:3000/",
-            "webRoot": "${workspaceFolder}"
+            "webRoot": "${workspaceFolder}",
+            "runtimeArgs": [
+                "--disable-web-security"
+              ]
         }
     ]
 }
